# Copyright 2022 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

// These messages are specific to the Open Source API, outside of the Public
// Cloud Vizier API.

syntax = "proto3";

package vizier;

import "google/protobuf/any.proto";

// A message for storing a (key, namespace, value) pair, where the "value" can
// either be a unicode string ($value) or a generic protobuf ($proto).
message KeyValue {
  // A string key.
  string key = 1;
  // Namespace containing the $key.
  // The (ns, key) pair maps to the value.  The empty namespace is
  // user-writeable; all other namespaces are reserved for Vizier algorithms.
  // NOTE: Vizier users should not set this field.
  string ns = 4;
  // The payload can be either a string or a proto, but not both.
  oneof a_value {
    string value = 2;
    google.protobuf.Any proto = 3;
  }
}
